--- a/resources/js/pages/Profile.scss
+++ b/resources/js/pages/Profile.scss
@@ -29,6 +29,23 @@
     .card-body {
         padding: 2rem;
     }
+
+    .form-control {
+        height: calc(2.5rem + 2px);
+        padding: 0.375rem 0.75rem;
+        font-size: 0.9rem;
+    }
+
+    .form-select {
+        height: calc(2.5rem + 2px);
+        padding: 0.375rem 0.75rem;
+        font-size: 0.9rem;
+    }
+
+    .form-label {
+        font-size: 0.9rem;
+        margin-bottom: 0.3rem;
+    }
 }
 
 .avatar-container {
