--- a/resources/js/pages/ProductDetail.scss
+++ b/resources/js/pages/ProductDetail.scss
@@ -1,14 +1,18 @@
 .product-detail {
     gap: 20px;
+
     .line {
         height: 0.6px;
         background-color: #dad9d9;
     }
+
     .detail {
+
         button,
         input {
             border-radius: 0;
         }
+
         .img {
             border-radius: 10px;
             margin: 20px 0;
@@ -16,13 +20,16 @@
             background-size: cover;
             background-position: center;
         }
+
         .price {
             font-size: 1.4rem;
             color: #e00000;
             font-weight: bold;
         }
+
         .info {
             font-size: 0.9rem;
+
             .coupon {
                 cursor: pointer;
                 border: 1px solid #ccc;
@@ -31,11 +38,14 @@
                     color: #71717192;
                 }
             }
+
             .quantity-selector {
                 gap: 1px;
+
                 i {
                     color: red;
                 }
+
                 button,
                 input {
                     border: 0.3px solid #ccc;
@@ -46,9 +56,11 @@
                 span:nth-child(1) {
                     font-size: 0.85rem;
                 }
+
                 span:nth-child(2) {
                     font-size: 1rem;
                 }
+
                 i {
                     font-size: 1.2rem;
                 }
@@ -58,9 +70,11 @@
                 .pinterest {
                     background-color: #ff94a6;
                 }
+
                 .facebook {
                     background-color: #4bb3ff;
                 }
+
                 .twitter {
                     background-color: #1da1f2;
                 }
@@ -71,8 +85,10 @@
     .blog-article {
         position: sticky;
         top: 1000px;
+
         .service {
             border-bottom: 1px solid #75757543;
+
             img {
                 width: 45px;
                 height: 45px;
@@ -90,7 +106,37 @@
 }
 
 .product-variant {
-  outline: none;
-  border: none;
-  cursor: pointer;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+
+.variant-selection {
+    .btn-outline-dark {
+        font-size: 0.875rem;
+        padding: 0.375rem 0.75rem;
+        min-height: 32px;
+
+        &:hover {
+            background-color: #212529;
+            color: white;
+        }
+
+        &.active {
+            background-color: #212529;
+            color: white;
+        }
+    }
+
+    .color-options {
+        .btn {
+            min-width: 90px;
+
+            .color-preview {
+                width: 16px;
+                height: 16px;
+                min-width: 16px;
+            }
+        }
+    }
 }
