--- a/resources/js/layouts/Header.scss
+++ b/resources/js/layouts/Header.scss
@@ -60,3 +60,16 @@ header {
         }
     }
 }
+
+.cart-counter {
+    transform: translate(50%, -50%) !important;
+    right: -5px !important;
+    top: 0 !important;
+    left: auto !important;
+    min-width: 18px;
+    height: 18px;
+    font-size: 0.75rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
