--- a/resources/js/components/ConfirmModal.scss
+++ b/resources/js/components/ConfirmModal.scss
@@ -10,6 +10,7 @@
 
         .modal-title {
             color: #212529;
+            font-weight: 600;
         }
 
         .btn-close {
@@ -24,15 +25,23 @@
 
     .modal-body {
         padding: 1.5rem;
+
+        p {
+            color: #6c757d;
+            font-size: 1.1rem;
+            margin: 0;
+        }
     }
 
     .modal-footer {
         padding: 0.5rem 1.5rem 1.5rem;
+        border: none;
 
         .btn {
             padding: 0.5rem 2rem;
             font-weight: 500;
             border-radius: 4px;
+            transition: all 0.2s ease;
 
             &.btn-outline-secondary {
                 border-color: #dee2e6;
