--- a/resources/js/pages/Cart.scss
+++ b/resources/js/pages/Cart.scss
@@ -70,6 +70,12 @@ input {
 .product-name {
     font-weight: 500;
     color: #212529;
+    transition: color 0.2s ease;
+
+    &:hover {
+        color: #0d6efd;
+        text-decoration: underline;
+    }
 }
 
 .product-variants {
