hiển thị chi tiết blog và blog-list

--- a/resources/js/pages/BlogDetails.scss
+++ b/resources/js/pages/BlogDetails.scss
@@ -39,3 +39,8 @@
         background-color: #77777770;
     }
 }
+
+// .main-content{
+//     display: grid;
+//     grid-template-columns: 1fr 5fr;
+// }
