--- a/resources/js/pages/Search.scss
+++ b/resources/js/pages/Search.scss
@@ -19,3 +19,40 @@
         }
     }
 }
+
+.nav-tabs {
+    border-bottom: 1px solid #dee2e6;
+
+    .nav-link {
+        border: none;
+        color: #6c757d;
+        padding: 0.5rem 1rem;
+
+        &.active {
+            color: #0d6efd;
+            border-bottom: 2px solid #0d6efd;
+        }
+
+        &:hover:not(.active) {
+            border-bottom: 2px solid #dee2e6;
+        }
+    }
+}
+
+.tab-content {
+    max-height: 300px;
+    overflow-y: auto;
+
+    &::-webkit-scrollbar {
+        width: 6px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: #f1f1f1;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: #888;
+        border-radius: 3px;
+    }
+}
