--- a/resources/js/pages/Login.scss
+++ b/resources/js/pages/Login.scss
@@ -1,65 +1,87 @@
-.login-container{
+.login-container {
     border: 1px solid #001;
-    input, button{
+
+    input,
+    button {
         border-radius: 0.25rem;
-        &:focus{
+
+        &:focus {
             outline: none;
             box-shadow: none;
         }
-        &::placeholder{
+
+        &::placeholder {
             opacity: 0.4;
             font-size: 1rem;
         }
+
         font-size: 1rem;
     }
-    label{
+
+    label {
         font-size: 1.1rem;
     }
 
 
-    a{
+    a {
         text-decoration: none;
     }
 
-    .left{
-        .line{
+    .left {
+        .line {
             height: 0.5px;
-           
+
             background-color: #9292926c;
         }
 
-        .oauth{
-            button{
+        .oauth {
+            button {
                 border-radius: 0;
             }
-            span{
+
+            span {
                 font-size: 0.9rem;
             }
         }
     }
-    .right{
+
+    .right {
         background-color: #3E3E3E;
-        ul{
+
+        ul {
             display: flex;
             flex-direction: column;
             gap: 1rem;
-           padding-left: 0;
-            i{
+            padding-left: 0;
+
+            i {
                 color: red;
 
             }
-            li{ margin: 0;
+
+            li {
+                margin: 0;
                 list-style: none;
                 font-size: 1rem;
             }
         }
-        button{
+
+        button {
             border: 1px solid #fff;
             background-color: #3E3E3E;
             color: #fff;
+            font-size: 1rem;
+            transition: background-color 0.2s ease;
 
-            &:hover{
+            &:hover {
                 background-color: #5d5d5d;
+                border-color: #fff;
+                color: #fff;
+            }
+
+            &:focus {
+                outline: none;
+                box-shadow: none;
             }
         }
     }
@@ -67,8 +89,9 @@
 
 
 
-body, html {
+body,
+html {
     margin: 0;
     padding: 0;
-    height: 100%; 
+    height: 100%;
 }
